# plox

./: README.md  architecture.drawio  classes.dot  packages.dot
plox/: get_next_token_ignoring_whitespace.py  token.py
plox/get_next_token/: get_next_token_ignoring_whitespace.py
plox/get_next_token/token/: single_character_tokens.py  two_character_tokens.py
plox/get_next_token/token/tokentype/: __init__.py  two_character_token_dicts.py
plox/increment_line_using_leading_whitespace/: __init__.py  count_returns_in_leading_whitespace.py  get_leading_whitespace.py
plox/token/: get_next_token_ignoring_whitespace.py  token.py
plox/token/tokentype/: token_dicts.py  two_character_token_dicts.py
plox_get_first_token/: __init__.py  pyproject.toml
plox_get_first_token/plox_get_first_token/: __init__.py
plox_get_first_token/tests/: test_get_first_token.py
plox_process_leading_whitespace/: pyproject.toml
plox_process_leading_whitespace/tests/: test_process_leading_whitespace.py
plox_token/: __init__.py  pyproject.toml
plox_token/plox_token/: __init__.py
plox_token/tests/: test_token.py
plox_tokentype/: __init__.py  pyproject.toml
plox_tokentype/plox_tokentype/: __init__.py
plox_tokentype/tests/: test_tokentype.py
tests/: test_scanner.py  test_token.py  test_tokentype.py
