[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "plox_token"
version = "0.1.0"
description = "Description of my package"
dependencies = [
    "plox_tokentype @ /Users/grantsmith/codeScratch/plox/plox_tokentype/dist/plox_tokentype-0.1.0-py2.py3-none-any.whl",
    "pytest"
]
